Fix overflow

--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -643,8 +643,8 @@ input[type="checkbox"] {
 }
 
 .split .area-2 {
-  padding-top: 7.75rem;
-  padding-bottom: 7.75rem;
+  padding-top: 2.75rem;
+  padding-bottom: 2.75rem;
 }
 
 .split p {
